feat(#316): fix 'super' attributes translation